--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 			<div id="flexgrid">
 				<div>
 					<header>
-						<h3>Crop Prediction</h3>
+						<h3>Crop Recommendation</h3>
 					</header>
-					<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet,
-						lectus arcu</p>
+					<p>At KrishiTech, our Crop Recommendation service, leverages advanced AI and data analytics to suggest the best crops for farmers to plant. By analyzing historical data, weather patterns, and soil conditions, we help farmers choose the most suitable crops to optimize yields and maximize productivity. Our insights empower farmers to make informed decisions, reduce risks, and improve overall farm efficiency, ensuring a prosperous harvest season.
+					</p>
 					<ul class="actions">
 						<li><a href="./templates/crop-prediction.html" class="button alt">Learn More</a></li>
 					</ul>
@@ -99,8 +99,8 @@
 					<header>
 						<h3>Fertilizer Prediction</h3>
 					</header>
-					<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh
-						sed </p>
+					<p>Our Fertilizer Recommendation service, provides personalized fertilizer recommendations based on soil health and crop requirements. By utilizing soil testing data and AI-driven algorithms, we offer precise fertilizer plans that enhance soil fertility and promote healthy crop growth. This service helps farmers optimize fertilizer use, reduce costs, and minimize environmental impact, ensuring sustainable and productive farming practices.
+					</p>
 					<ul class="actions">
 						<li><a href="templates/fertilizer prediction.html" class="button alt">Learn More</a></li>
 					</ul>
@@ -109,8 +109,8 @@
 					<header>
 						<h3>Disease Prediction</h3>
 					</header>
-					<p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper
-						vehicula.</p>
+					<p>KrishiTech's Disease Prediction service, uses cutting-edge technology to identify and predict crop diseases before they spread. By analyzing environmental factors, plant health data, and historical disease occurrences, we provide early warnings and actionable insights to farmers. This proactive approach helps in timely intervention, reducing crop loss, and maintaining healthy yields, ultimately safeguarding the farmer's livelihood and the agricultural ecosystem.
+					</p>
 					<ul class="actions">
 						<li><a href="./templates/disease-prediction.html" class="button alt">Learn More</a></li>
 					</ul>
@@ -159,7 +159,7 @@
 						</div>
 						<div class="content">
 							<header class="align-center">
-								<h2>Our Products</h2>
+								<h2>Products</h2>
 
 							</header>
 							<hr>
@@ -179,7 +179,7 @@
 								collaboration, KrishiTech is committed to helping farmers maximize productivity,
 								sustainability, and profitability in agriculture.</p>
 								<ul class="actions">
-									<li><a href="products.html" class="button alt">Our products</a></li>
+									<li><a href="products.html" class="button alt">View products</a></li>
 								</ul>
 						</div>
 					</div>
