--- a/products.html
+++ b/products.html
@@ -52,7 +52,7 @@
 <body>
     <header>
         <div class="container">
-            <h1 style="font-size: 5rem;">Our Products</h1>
+            <h1 style="font-size: 5rem;">Products</h1>
             <div class="search-cart">
                 <input type="text" id="search" placeholder="Search Products">
                 <i class="fa-solid fa-cart-shopping"></i>
