--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="#about">About</a></li>
 			<li><a href="#services">Services</a></li>
-			<li><a href="#products">Products</a></li>
+			<li><a href="#products">Marketplace</a></li>
 			<li><a href="#community">Community</a></li>
 			<li><a href="./templates/login.html">Sign In</a></li>
 		</ul>
