--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 					community focused on growing a prosperous and sustainable future. Together, we can revolutionize
 					agriculture and make a positive impact on our environment and livelihoods. Let's cultivate success
 					and innovation, one farm at a time.</p>
-				<a href="#one" class="button special scrolly" id="community-button">join our community</a>
+				<a href="community.html" class="button special scrolly" id="community-button">join our community</a>
 
 			</header>
 		</div>
