added cnn architecture

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 			<li><a href="#services">Services</a></li>
 			<li><a href="#products">Marketplace</a></li>
 			<li><a href="#community">Community</a></li>
+			<li><a href="read_more.html">Blogs</a></li>
+			<li><a href='gov.html'>Government schemes</li>
 			<li><a href="./templates/login.html">Sign In</a></li>
 		</ul>
 	</nav>
@@ -369,33 +371,6 @@
 	<script src="assets/js/skel.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-	<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
-	<script src="https://mediafiles.botpress.cloud/1be11dea-723f-4603-8436-70d7b564c50b/webchat/config.js"
-		defer></script>
-	<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
-	<script>
-		window.botpressWebChat.init({
-			"composerPlaceholder": "Ask me anything about farming!",
-			"botConversationDescription": "Krishi-Talk is your ultimate agricultural assistant, offering expert advice on crop management, fertilizer usage, pest control, disease diagnosis, and real-time weather updates. Upload images for instant disease detection and get personalized solutions for all your farming needs. Empower your farming with Krishi-Talk!",
-			"botId": "1be11dea-723f-4603-8436-70d7b564c50b",
-			"hostUrl": "https://cdn.botpress.cloud/webchat/v1",
-			"messagingUrl": "https://messaging.botpress.cloud",
-			"clientId": "1be11dea-723f-4603-8436-70d7b564c50b",
-			"webhookId": "1b49aaf8-8386-48e0-b86e-5681c57d3008",
-			"lazySocket": true,
-			"themeName": "prism",
-			"botName": "Krishi-Talk",
-			"avatarUrl": "https://www.facebook.com/SanctuaryofEasley/",
-			"stylesheet": "https://webchat-styler-css.botpress.app/prod/3184851e-568e-45e6-bc01-5a50dd769b45/v3003/style.css",
-			"frontendVersion": "v1",
-			"useSessionStorage": true,
-			"showBotInfoPage": true,
-			"enableConversationDeletion": true,
-			"theme": "prism",
-			"themeColor": "#2563eb",
-			"allowedOrigins": []
-		});
-	</script>
 </body>
 
 </html>
