--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="#about">About</a></li>
 			<li><a href="#services">Services</a></li>
-			<li><a href="#products">Marketplace</a></li>
+			<li><a href="#products">Products</a></li>
 			<li><a href="#community">Community</a></li>
-			<li><a href="read_more.html">Blogs</a></li>
-			<li><a href='gov.html'>Government schemes</li>
+			<li><a href='gov.html'>Government Schemes</a></li>
+			<li><a href="mrketplace.html">Marketplace</a></li>
 			<li><a href="./templates/login.html">Sign In</a></li>
 		</ul>
 	</nav>
@@ -89,7 +89,7 @@
 			<div id="flexgrid">
 				<div>
 					<header>
-						<h3>Crop Recommendation</h3>
+						<h3>Crop Prediction</h3>
 					</header>
 					<p>At KrishiTech, our Crop Recommendation service, leverages advanced AI and data analytics to suggest the best crops for farmers to plant. By analyzing historical data, weather patterns, and soil conditions, we help farmers choose the most suitable crops to optimize yields and maximize productivity. Our insights empower farmers to make informed decisions, reduce risks, and improve overall farm efficiency, ensuring a prosperous harvest season.
 					</p>
@@ -161,7 +161,7 @@
 						</div>
 						<div class="content">
 							<header class="align-center">
-								<h2>Products</h2>
+								<h2>Our Products</h2>
 
 							</header>
 							<hr>
@@ -181,7 +181,7 @@
 								collaboration, KrishiTech is committed to helping farmers maximize productivity,
 								sustainability, and profitability in agriculture.</p>
 								<ul class="actions">
-									<li><a href="products.html" class="button alt">View products</a></li>
+									<li><a href="products.html" class="button alt">Our products</a></li>
 								</ul>
 						</div>
 					</div>
@@ -332,7 +332,7 @@
 					community focused on growing a prosperous and sustainable future. Together, we can revolutionize
 					agriculture and make a positive impact on our environment and livelihoods. Let's cultivate success
 					and innovation, one farm at a time.</p>
-				<a href="community.html" class="button special scrolly" id="community-button">join our community</a>
+				<a href="#one" class="button special scrolly" id="community-button">join our community</a>
 
 			</header>
 		</div>
